Adicionadas Notifições ao Emprestar/Devolver livro. Tratamento de Leak ao Emprestar Substituição de Strings literais por resources Limpeza e optimizações no Código